일간왕쇠강약

--- a/public/index.html
+++ b/public/index.html
@@ -242,7 +242,7 @@
     
     <select id="calendar-type" name="calendar-type">
       <option value="선택" ></option>
-      <option value="solar" >양력</option>
+      <option value="solar"  >양력</option>
       <option value="lunar">음력</option>
     </select><br />
     <label>성별:</label>
@@ -380,7 +380,7 @@
   </div>
 </div>
 
-
+  <div id="container"></div>  <!-- ✅ 여기에 출력 -->
 <!-- EmailJS SDK 추가 -->
 <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 <script type="module" src="app.js"></script>
