--- a/public/index3선택됨.html
+++ b/public/index3선택됨.html
@@ -380,7 +380,7 @@
   </div>
 </div>
 
-
+  <div id="container"></div>  <!-- ✅ 여기에 출력 -->
 <!-- EmailJS SDK 추가 -->
 <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 <script type="module" src="app.js"></script>
