--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,30 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8" />
+
 <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet" />
 
-<title>트리 만세력</title>
 
+<title>트리 만세력</title>
+  <!-- Supabase SDK -->
+  <!-- (바꾼 후) -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+
+  
+ <!-- 2) Supabase 초기화 (전역 등록) -->
+<script>
+  // SDK 로드 후 전역에 supabase 가 존재해야 함
+  if (!window.supabase) {
+    alert("Supabase SDK 로드 실패. 네트워크 또는 CDN 경로를 확인하세요.");
+  }
+  window.supabaseClient = window.supabase.createClient(
+    "https://dxrgobsgeeshkybkbnxo.supabase.co",
+    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImR4cmdvYnNnZWVzaGt5YmtibnhvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTgwOTAyNzIsImV4cCI6MjA3MzY2NjI3Mn0.vD1xSRezaTC2OUikZZJM7UntQaQWvOxRkvYiMl78UZA"
+  );
+  // 호환용
+  window.client = window.supabaseClient;
+  console.log("[INDEX] supabaseClient ready:", !!window.supabaseClient);
+</script>
 
 <style>
   body {
@@ -219,8 +239,12 @@
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
+
+
 <!-- 2. flatpickr JS (★ 먼저 불러와야 함) -->
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
+
 </head>
 <body>
 
@@ -234,22 +258,113 @@
   <div class="vine-deco vine-bottom-right"></div>
 
   <h1>트리 만세력</h1>
+<!-- 로그인/로그아웃 영역 -->
+<div id="auth-section" class="auth-section" style="margin-top:20px;">
+  <form id="login-form">
+    <table class="auth-table">
+      <tr>
+        <!-- 이메일 입력 -->
+        <td>
+          <input type="email" id="email" placeholder="이메일" style="padding:5px; width:120px;">
+        </td>
+        <!-- 로그인 / 회원가입 -->
+        <td>
+          <button type="button" id="loginBtn" class="btn-success">로그인</button>
+          <button type="button" id="signupBtn" class="btn-success" style="margin-left:8px; background-color:#fab7b7; color:white; border:none; padding:5px 10px; border-radius:4px; cursor:pointer;">회원가입</button>
+        </td>
+      </tr>
+      <tr>
+        <!-- 비밀번호 입력 -->
+        <td>
+          <input type="password" id="password" placeholder="비밀번호" style="padding:5px; width:120px;">
+        </td>
+        <!-- 소셜 로그인 -->
+        <td>
+          <button type="button" id="googleLogin" class="btn-success">구글 로그인</button>
+          <button type="button" id="kakaoLogin" class="btn-success">카카오 로그인</button>
+        </td>
+      </tr>
+    </table>
+  </form>
+</div>
+
+<!-- 로그인 후 표시 -->
+<div id="profile-section" style="display:none; margin-top:8px;">
+  <span id="user-nickname" style="font-weight:600; color: blue;"></span> 님 환영합니다
+ 
+  <button id="logoutBtn" type="button" style="margin-left:8px; background-color:#fab7b7; color:white; border:none; padding:5px 10px; border-radius:4px; cursor:pointer;">로그아웃</button>
+  <button id="toggle-history-btn" style="background-color:#4CAF50; color:white; border:none; padding:5px 10px; border-radius:4px; cursor:pointer;">고객data</button>
+  <button id="subscribeBtn" type="button" style="margin-left:8px;background-color:#4CAF50; color:white; border:none; padding:5px 10px; border-radius:4px; cursor:pointer;">정기구독</button>
+
+
+<!-- 패널 (처음엔 숨김) -->
+<div id="saju-history-panel" style="display:none; margin-top:10px;">
+  <!-- 검색 -->
+  <div>
+    <input type="text" id="search-name" placeholder="이름 검색" style="background-color:#f7f4df; border:1px solid #ccc; padding:5px; border-radius:4px; width:60px;">
+    <button id="search-btn" style="background-color:#4CAF50; color:white; border:none; padding:5px 10px; border-radius:4px; cursor:pointer;">검색</button>
+  </div>
+
+  <!-- 테이블 -->
+  <table border="1" width="100%" id="saju-history-table">
+    <thead>
+      <tr>
+        <th>이름</th>
+        <th>생년월일</th>
+        <th>성별</th>
+        <th>등록일</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+
+  <!-- 페이지 컨트롤 -->
+  <div style="margin-top:10px;">
+    <button id="prev-page">이전</button>
+    <span id="page-info">페이지 1</span>
+    <button id="next-page">다음</button>
+  </div>
+</div>
+
+
+</div>
+
+<!-- 결제 모달 -->
+<div id="subscriptionModal" style="display:none; margin-top:20px; border:1px solid #ccc; padding:16px;">
+  <h3>정기구독 결제</h3>
+  <p>전화번호 인증이 완료되었습니다. 결제 방법을 선택하세요.</p>
+  <button onclick="startGoogleSubscription()">Google 정기구독 결제</button>
+  <button onclick="startKakaoSubscription()">Kakao 정기구독 결제</button>
+</div>
+
+
+
 
     <form id="saju-form">
+      <label>고객명:</label>
+<input type="text" id="customer-name" placeholder="저장관리용" style="background-color:#f7f4df; border:1px solid #ccc; padding:5px; border-radius:4px; width:60px;" />
+ <label for="gender">성별:</label>
+<select id="gender">
+  <option value="">선택</option>
+  <option value="male" selected>남자</option>
+  <option value="female">여자</option>
+</select>
+<br />
+
     <label>생년월일:</label> 
-    <input  type="text" id="birth-date" placeholder="YYYYMMDD" class="birthdate-input" />
- 
+    <input  type="text" id="birth-date" placeholder="YYYYMMDD" class="birthdate-input" style="background-color:#f7dff5; border:1px solid #ccc; padding:5px; border-radius:4px; width:80px;"/>
+
     
     <select id="calendar-type" name="calendar-type">
       <option value="선택" ></option>
-      <option value="solar" >양력</option>
+                                    <option value="solar" >양력</option>
       <option value="lunar">음력</option>
-    </select><br />
-    <label>성별:</label>
-    <label><input type="radio" name="gender" value="male" > 남자</label>
-    <label><input type="radio" name="gender" value="female"> 여자</label><br />
+    </select>
+
+<br />
+
     <label>출생 시간:</label>
-    <label><input type="radio" name="ampm" value="AM" > 오전</label>
+                         <label><input type="radio" name="ampm" value="AM" > 오전</label>
     <label><input type="radio" name="ampm" value="PM"> 오후</label>
     <label>+</label>
     <select id="hour-select">
@@ -257,7 +372,7 @@
        <option value="0">0시</option>
       <option value="1">1시</option>
       <option value="2">2시</option>
-      <option value="3">3시</option>
+                                    <option value="3" >3시</option>
       <option value="4">4시</option>
       <option value="5">5시</option>
       <option value="6">6시</option>
@@ -279,7 +394,7 @@
   <option value="7">7분</option>
   <option value="8">8분</option>
   <option value="9">9분</option>
-  <option value="10">10분</option>
+                             <option value="10" >10분</option>
   <option value="11">11분</option>
   <option value="12">12분</option>
   <option value="13">13분</option>
@@ -330,13 +445,16 @@
   <option value="58">58분</option>
   <option value="59">59분</option>
 </select><br />
-<button type="submit" class="btn-success">사주식 출력</button>
-<button type="button" id="sinsalBtn" class="btn-success">신살보기</button>
 
+  <!-- 기존 버튼 -->
+  <button type="button" id="sajuSubmit" class="btn-success">사주식 출력</button>
+  <button type="button" id="sinsalBtn" class="btn-success">신살보기</button>
 
-
-
+ 
   </form>
+
+
+
 
 <div class="note-box">
   ※ 태어난 분대가 20~40분(30분 근처)에 있는 분은 정확한 시주가 <br>산출되지 않을 수도 있으니 따로 확인해 주세요! <br>한국썸머타임은 적용된 상태입니다. 
@@ -385,35 +503,8 @@
 <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 <script type="module" src="app.js"></script>
 
-   <script>
-    flatpickr("#birthdate", {
-      dateFormat: "Y-m-d",
-      allowInput: true,
-      //maxDate: "2100-12-31",
-      //minDate: "1900-01-01",
-      defaultDate: "1969-08-23" //초기날짜값
-    });
-  </script>
-<script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const btn = document.getElementById("sinsalBtn");
-    if (btn) {
-      btn.addEventListener("click", (e) => {
-        e.preventDefault();
 
-        const result = document.getElementById("result");
-        const basic = document.getElementById("basic-section");
-        const sinsal = document.getElementById("sinsal-section");
 
-        if (result && basic && sinsal) {
-          result.style.display = "block";
-          basic.style.display = "none";
-          sinsal.style.display = "block";
-        }
-      });
-    }
-  });
-</script>
 
 </body>
 </html>
