일간왕쇠강약

--- a/public/index.html
+++ b/public/index.html
@@ -453,7 +453,7 @@
  <label for="gender">성별:</label>
 <select id="gender">
   <option value="">선택</option>
-  <option value="male" selected>남자</option>
+  <option value="male" >남자</option>
   <option value="female">여자</option>
 </select>
 <br />
