로그인횟수제한

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,9 @@
+ <!-- // git add .
+// git commit -m "로그인횟수제한"   
+// git push origin main
+// git push
+//강제실행   vercel --prod --force
+-->
 <!DOCTYPE html>
 <html lang="ko">
 <head>
