--- a/public/index3선택됨.html
+++ b/public/index3선택됨.html
@@ -1,3 +1,9 @@
+ <!-- //         git add .
+//               git commit -m "로그인횟수제한"   
+//               git push origin main
+//               git push
+//               강제실행   vercel --prod --force
+-->
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -493,7 +499,7 @@
        <option value="0">0시</option>
       <option value="1">1시</option>
       <option value="2">2시</option>
-                                    <option value="3" selected>3시</option>
+                                    <option value="3"selected>3시</option>
       <option value="4">4시</option>
       <option value="5">5시</option>
       <option value="6">6시</option>
@@ -515,7 +521,7 @@
   <option value="7">7분</option>
   <option value="8">8분</option>
   <option value="9">9분</option>
-                             <option value="10" selected >10분</option>
+                             <option value="10"  selected>10분</option>
   <option value="11">11분</option>
   <option value="12">12분</option>
   <option value="13">13분</option>
