--- a/public/index3선택됨.html
+++ b/public/index3선택됨.html
@@ -472,7 +472,7 @@
  <label for="gender">성별:</label>
 <select id="gender">
   <option value="">선택</option>
-  <option value="male" selected>남자</option>
+  <option value="male" >남자</option>
   <option value="female">여자</option>
 </select>
 <button id="reset-btn" type="button" style="margin-left:8px; background-color:#fcfdd0; color:rgb(5, 1, 1); border:none; padding:5px 10px; border-radius:4px; cursor:pointer;" >다시입력</button>
@@ -484,14 +484,14 @@
     
     <select id="calendar-type" name="calendar-type">
       <option value="">선택</option>
-                                    <option value="solar" selected >양력</option>
+                                    <option value="solar"  >양력</option>
       <option value="lunar">음력</option>
     </select>
 
 <br />
 
     <label>출생 시간:</label>
-                         <label><input type="radio" name="ampm" value="AM" checked> 오전</label>
+                         <label><input type="radio" name="ampm" value="AM"> 오전</label>
     <label><input type="radio" name="ampm" value="PM"> 오후</label>
     <label>+</label>
     <select id="hour-select">
@@ -499,7 +499,7 @@
        <option value="0">0시</option>
       <option value="1">1시</option>
       <option value="2">2시</option>
-                                    <option value="3"selected>3시</option>
+                                    <option value="3" >3시</option>
       <option value="4">4시</option>
       <option value="5">5시</option>
       <option value="6">6시</option>
@@ -521,7 +521,7 @@
   <option value="7">7분</option>
   <option value="8">8분</option>
   <option value="9">9분</option>
-                             <option value="10"  selected>10분</option>
+                             <option value="10"  >10분</option>
   <option value="11">11분</option>
   <option value="12">12분</option>
   <option value="13">13분</option>
